# kw6

./: .gitignore  Dockerfile  README.rst  dev_requirements.txt  publish.sh  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
.github/workflows/: publish.yml  test.yml
docs/source/: camera.rst  conf.py  index.rst  position.rst  reader.rst  requirements.txt  stream.rst  to_png.rst  to_video.rst  to_videos.rst
kw6/: __init__.py  camera.py  header.py  position.py  reader.py  settings.py  stream.py  to_png.py  to_video.py  to_videos.py  types.py
tests/: dynamic.hdr  owlsbtlwear20210409_132606_2011TA.hdr
